<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textCapCharacters"
            android:hint="@string/enter_profile"
            android:id="@+id/profile_tag"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:contentDescription="@string/get"
            android:id="@+id/get"
            android:layout_weight="8"

            android:text="@string/get"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/badge"
            android:id="@+id/league_badge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:contentDescription="@string/name"
            android:id="@+id/name"
            android:theme="@style/Text"
            android:text="@string/name"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/war_stars"
        android:contentDescription="@string/war_star"
        android:theme="@style/Text"
        />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/troop_donated"
        android:theme="@style/Text"
        android:contentDescription="@string/troop_donated"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/troop_recieved"
        android:theme="@style/Text"
        android:contentDescription="@string/troop_recieved"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/troop_perc"
        android:theme="@style/Text"
        android:contentDescription="@string/perc_dona"
        android:layout_height="wrap_content" />
</LinearLayout>